# gs_examples_communication

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
gs_examples_serialization/: .gitignore  README.md
gs_examples_serialization/avrocexample/: CMakeLists.txt
gs_examples_serialization/avrocexample/src/: hk-schema.h  serialExample.c
gs_examples_serialization/avrocexample/tools/: headermaker.py
gs_examples_serialization/avrocppexample/: CMakeLists.txt  build.sh
gs_examples_serialization/avrocppexample/include/: AvroEntities.hh  HKGenerator.cpp  HKGenerator.hh  HKSchema.hh  Utils.cpp  Utils.hh  WFGenerator.cpp  WFGenerator.hh  WFSchema.hh
gs_examples_serialization/avrocppexample/src/: HKtest.cpp  WFtest.cpp
gs_examples_serialization/ccsds/: CMakeLists.txt
gs_examples_serialization/ccsds/include/: generators.cpp  generators.hh  packet.cpp  packet.h  tchandler.h
gs_examples_serialization/ccsds/src/: HKtest.cpp  WFtest.cpp
gs_examples_serialization/protocol_buffer/: CMakeLists.txt  HK.proto  TimeSpec.proto  WF.proto
gs_examples_serialization/protocol_buffer/include/: HKGenerator.cpp  HKGenerator.hh  ProtocolBufferEntities.hh  TimeSpecGen.cpp  TimeSpecGen.hh  Utils.cpp  Utils.hh  WFGenerator.cpp  WFGenerator.hh  WF_main.cpp
gs_examples_serialization/protocol_buffer/src/: HK_main.cpp  WF_main.cpp
include/: utils.cc  utils.hh
shared_memory/: CMakeLists.txt
shared_memory/src/: ProdCons.cpp
src/shared_memory/: ProdCons.cpp
src/zeromq/: config.txt
src/zeromq/avrocpp/: AvroConsumer.cpp  AvroProducer.cpp
src/zeromq/ccsds/: CCSDSConsumer.cpp  CCSDSProducer.cpp
src/zeromq/example/: consEx.cpp  prodEx.cpp
src/zeromq/include/: consumer.hh  producer.hh
src/zeromq/protobuf/: ProtoConsumer.cpp  ProtoProducer.cpp
zeromq/: CMakeLists.txt
zeromq/include/: consumer.hh  producer.hh  utils.cc  utils.hh
zeromq/src/: consEx.cpp  consumer.cpp  producer.cpp
zeromq/src/avrocpp/: AvroConsumer.cpp  AvroProducer.cpp
zeromq/src/ccsds/: CCSDSConsumer.cpp  CCSDSProducer.cpp
zeromq/src/example/: consEx.cpp  prodEx.cpp
zeromq/src/protobuf/: ProtoConsumer.cpp  ProtoProducer.cpp
